--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <h1>Introduction to Front-end Development</h1>
-<p>A front-end architects and develops client part of websites and applications using web technologies (languages):</p>
+<p>A front-end developer architects and develops client part of websites and applications using web technologies
+    (languages):</p>
 <ul>
     <li style="color: green;">HTML</li>
     <li style="color: purple;">CSS</li>
